# design-daas

./: .gitignore  .gitmodules  LICENSE  README.md  mkdocs.yml
docs/: Makefile  (+10 more)
src/: .gitignore  .pylintrc  Dockerfile  Makefile  README.md  main.py  pyproject.toml
src/app/daas/adapter/: adapter_http.py  adapter_ssh.py
src/app/daas/auth/: auth_daas.py  auth_daas_local.py  auth_daas_remote.py
src/app/daas/common/: config.py  ctx.py  enums.py  errors.py  model.py
src/app/daas/db/: database.py  db_api.py  db_manager.py  db_mappings.py  db_model.py  db_repos.py  db_samples.py
src/app/daas/messaging/: runner_backend.py  runner_instance.py  runner_local.py
src/app/daas/node/: nodecontrol.py
src/app/daas/objects/: base_container.py  base_instance.py  base_machine.py  base_object.py  config_container.py  config_factory.py  config_machine.py  env_container.py  env_machine.py  object_application.py  object_container.py  object_instance.py  object_machine.py  phase_container.py  phase_instance.py  phase_machine.py
src/app/inst/: CommandProxy.md  CommandProxy.py  ProxyControl.py  cmdline.py  push2ip.bash  push2x11cont.bash  timings.py
src/config/: auth.toml  ceph.toml  container.toml  db.toml  extensions.toml  files.toml  info.toml  limits.toml  logging.toml  messaging.toml  node.toml  proxy.toml  qweb.toml  vm.toml
src/scripts/: entrypoint.bash  gen_apidocs.py  plot_columns.py  plot_combined.py  plot_domains.py  plot_methods.py  plot_origins.py  tests_browser.bash  tests_curl.bash  tests_curl_async.bash  tests_curl_sync.bash  tests_nightly.bash  tests_token.bash
(+336 files in other folders)
