[project]
name = "app"
dependencies = [
  "quart",
  "quart-cors",
  "nest_asyncio",
  "pandas",
  "matplotlib",
  "sqlalchemy",
  "pymysql",
  "docker",
  "pika",
  "netifaces",
  "psutil",
  "websockets",
]
description = "Design quart app"
requires-python = ">=3.11"
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "pylint ~= 2.17",
  "pylint-per-file-ignores ~= 1.2.1",
  "black ~= 23.0",
  "mypy ~= 1.3.0",
  "types-requests",
  "types-click",
  "types-aiofiles",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pyright]
venvPath = ".venv"

[tool.black]
line-length = 80
target-version = ['py311']

[tool.mypy]
check_untyped_defs = false
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["docker.*", "hypothesis.*", "pytest.*"]
ignore_missing_imports = false
